Use OriginalProfile for crostini

Crostini should still work for incognito to do things such as
save files from browser into Linux files.

By default any keyed service such as CrostiniRestarterService
will not be created for an incognito profile.

Bug: 878230
Change-Id: I066f2d810351eb682e9637e104daac2ddb8fe23c
Reviewed-on: https://chromium-review.googlesource.com/1201649
Commit-Queue: Joel Hockey <joelhockey@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588459}
Former-commit-id: 09c2494bf98b35de80a381ee94e6528330c6ee42